syntax = "proto3";

option go_package = "github.com/kevinkimutai/ticketingapp/auth/authproto";

import "google/api/annotations.proto";

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message SignUpRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string password = 4;
}

message SignUpResponse {
    uint64 user_id = 1;
}

message VerifyTokenRequest{
    string token = 1;
}

message VerifyTokenResponse{
   uint64 user_id = 1;
}

service AuthProto {
  rpc Login (LoginRequest) returns (LoginResponse){
    option (google.api.http) = {
     post: "/v1/auth/login"
     body: "*"
   };
  };
  rpc Signup (SignUpRequest) returns (SignUpResponse){
    option (google.api.http) = {
     post: "/v1/auth/signup"
     body: "*"
   };
  };
  rpc VerifyJWT(VerifyTokenRequest)returns(VerifyTokenResponse){
    option (google.api.http) = {
     post: "/v1/auth/verify"
     body: "*"
   };
};
};